# weberist

./: .gitignore  README.md  pyproject.toml
src/docker/: Dockerfile-chrome  browsers  docker-compose-selenoid.yml
src/docker/data/: chrome-entrypoint.sh
src/weberist/: __init__.py
src/weberist/base/: README.md  config.py  data.py  drivers.py  exceptions.py  managers.py
src/weberist/base/stealth/: tools.py
src/weberist/core/: drivers.py
src/weberist/generic/: constants.py  types.py  utils.py
src/weberist/utils/: docker.py  javascript.py
